# adk-wealth-management

./: .gitignore  README.md  pyproject.toml  setgeminikey.example
data/: beneficiaries.json  clients.json  investments.json
src/adk_supervisor/: README.md  main.py
src/api/: main.py  startcloudapi.sh  startlocalapi.sh
src/common/: agent_constants.py  beneficiaries_manager.py  client_helper.py  client_manager.py  event_stream_manager.py  investment_manager.py  redis_config.py  user_message.py  util.py
src/frontend/: package-lock.json
src/frontend/src/: App.js
src/temporal_supervisor/: README.md  cloudsendcomplianceapproval.sh  localsendcomplianceapproval.sh  run_send_compliance_approval.py  run_worker.py  startcloudworker.sh  startcodecserver.sh  startlocalworker.sh
src/temporal_supervisor/activities/: activity_tool.py  beneficiaries.py  clients.py  event_stream_activities.py  investments.py  open_account.py
src/temporal_supervisor/claim_check/: claim_check_codec.py  claim_check_plugin.py
src/temporal_supervisor/codec_server/: codec_server.py
src/temporal_supervisor/workflows/: open_account_workflow.py  supervisor_workflow.py
